jdk1.3 compatibility (moving towards 1.2)